@@ -1,3 +1,10 @@
+2007-08-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/CiscoIOS.pm:
+	Removed BGP Advertized prefixes
+	Added the prefix limits to Accepted prefixes
+	
+
 2007-08-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* NEWS: Torrus release 1.0.6
